// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CamelComponentSchemaService getSchemaFromCamelCommonProperties should return a schema with the properties 1`] = `
{
  "properties": {
    "description": {
      "deprecated": false,
      "description": "Sets the description of this node",
      "title": "Description",
      "type": "string",
    },
    "disabled": {
      "deprecated": false,
      "description": "Whether to disable this EIP from the route during build time. Once an EIP has been disabled then it cannot be enabled later at runtime.",
      "title": "Disabled",
      "type": "boolean",
    },
    "id": {
      "deprecated": false,
      "description": "Sets the id of this node",
      "title": "Id",
      "type": "string",
    },
    "logName": {
      "deprecated": false,
      "description": "Sets the name of the logger",
      "title": "Log Name",
      "type": "string",
    },
    "logger": {
      "deprecated": false,
      "description": "To refer to a custom logger instance to lookup from the registry.",
      "title": "Logger",
      "type": "object",
    },
    "loggingLevel": {
      "deprecated": false,
      "description": "Sets the logging level. The default value is INFO",
      "enum": [
        "TRACE",
        "DEBUG",
        "INFO",
        "WARN",
        "ERROR",
        "OFF",
      ],
      "title": "Logging Level",
      "type": undefined,
    },
    "marker": {
      "deprecated": false,
      "description": "To use slf4j marker",
      "title": "Marker",
      "type": "string",
    },
    "message": {
      "deprecated": false,
      "description": "Sets the log message (uses simple language)",
      "title": "Message",
      "type": "string",
    },
  },
  "required": [
    "message",
  ],
  "type": "object",
}
`;

exports[`CamelComponentSchemaService getVisualComponentSchema should build the appropriate schema for processors combined that holds a component 1`] = `
{
  "definition": {
    "id": "to-3044",
    "parameters": {
      "groupActiveOnly": true,
      "level": "ERROR",
      "logMask": true,
    },
    "uri": "log",
  },
  "schema": {
    "properties": {
      "description": {
        "deprecated": false,
        "description": "Sets the description of this node",
        "title": "Description",
        "type": "string",
      },
      "disabled": {
        "deprecated": false,
        "description": "Whether to disable this EIP from the route during build time. Once an EIP has been disabled then it cannot be enabled later at runtime.",
        "title": "Disabled",
        "type": "boolean",
      },
      "id": {
        "deprecated": false,
        "description": "Sets the id of this node",
        "title": "Id",
        "type": "string",
      },
      "parameters": {
        "description": "Endpoint properties description",
        "properties": {
          "exchangeFormatter": {
            "deprecated": false,
            "description": "To use a custom exchange formatter",
            "title": "Exchange Formatter",
            "type": "object",
          },
          "groupActiveOnly": {
            "deprecated": false,
            "description": "If true, will hide stats when no new messages have been received for a time interval, if false, show stats regardless of message traffic.",
            "title": "Group Active Only",
            "type": "boolean",
          },
          "groupDelay": {
            "deprecated": false,
            "description": "Set the initial delay for stats (in millis)",
            "title": "Group Delay",
            "type": "integer",
          },
          "groupInterval": {
            "deprecated": false,
            "description": "If specified will group message stats by this time interval (in millis)",
            "title": "Group Interval",
            "type": "integer",
          },
          "groupSize": {
            "deprecated": false,
            "description": "An integer that specifies a group size for throughput logging.",
            "title": "Group Size",
            "type": "integer",
          },
          "lazyStartProducer": {
            "deprecated": false,
            "description": "Whether the producer should be started lazy (on the first message). By starting lazy you can use this to allow CamelContext and routes to startup in situations where a producer may otherwise fail during starting and cause the route to fail being started. By deferring this startup to be lazy then the startup failure can be handled during routing messages via Camel's routing error handlers. Beware that when the first message is processed then creating and starting the producer may take a little time and prolong the total processing time of the processing.",
            "title": "Lazy Start Producer",
            "type": "boolean",
          },
          "level": {
            "deprecated": false,
            "description": "Logging level to use. The default value is INFO.",
            "enum": [
              "TRACE",
              "DEBUG",
              "INFO",
              "WARN",
              "ERROR",
              "OFF",
            ],
            "title": "Level",
            "type": undefined,
          },
          "logMask": {
            "deprecated": false,
            "description": "If true, mask sensitive information like password or passphrase in the log.",
            "title": "Log Mask",
            "type": "boolean",
          },
          "loggerName": {
            "deprecated": false,
            "description": "Name of the logging category to use",
            "title": "Logger Name",
            "type": "string",
          },
          "marker": {
            "deprecated": false,
            "description": "An optional Marker name to use.",
            "title": "Marker",
            "type": "string",
          },
          "maxChars": {
            "deprecated": false,
            "description": "Limits the number of characters logged per line.",
            "title": "Max Chars",
            "type": "integer",
          },
          "multiline": {
            "deprecated": false,
            "description": "If enabled then each information is outputted on a newline.",
            "title": "Multiline",
            "type": "boolean",
          },
          "plain": {
            "deprecated": false,
            "description": "If enabled only the body will be printed out",
            "title": "Plain",
            "type": "boolean",
          },
          "showAll": {
            "deprecated": false,
            "description": "Quick option for turning all options on. (multiline, maxChars has to be manually set if to be used)",
            "title": "Show All",
            "type": "boolean",
          },
          "showAllProperties": {
            "deprecated": false,
            "description": "Show all of the exchange properties (both internal and custom).",
            "title": "Show All Properties",
            "type": "boolean",
          },
          "showBody": {
            "deprecated": false,
            "description": "Show the message body.",
            "title": "Show Body",
            "type": "boolean",
          },
          "showBodyType": {
            "deprecated": false,
            "description": "Show the body Java type.",
            "title": "Show Body Type",
            "type": "boolean",
          },
          "showCachedStreams": {
            "deprecated": false,
            "description": "Whether Camel should show cached stream bodies or not (org.apache.camel.StreamCache).",
            "title": "Show Cached Streams",
            "type": "boolean",
          },
          "showCaughtException": {
            "deprecated": false,
            "description": "If the exchange has a caught exception, show the exception message (no stack trace). A caught exception is stored as a property on the exchange (using the key org.apache.camel.Exchange#EXCEPTION_CAUGHT) and for instance a doCatch can catch exceptions.",
            "title": "Show Caught Exception",
            "type": "boolean",
          },
          "showException": {
            "deprecated": false,
            "description": "If the exchange has an exception, show the exception message (no stacktrace)",
            "title": "Show Exception",
            "type": "boolean",
          },
          "showExchangeId": {
            "deprecated": false,
            "description": "Show the unique exchange ID.",
            "title": "Show Exchange Id",
            "type": "boolean",
          },
          "showExchangePattern": {
            "deprecated": false,
            "description": "Shows the Message Exchange Pattern (or MEP for short).",
            "title": "Show Exchange Pattern",
            "type": "boolean",
          },
          "showFiles": {
            "deprecated": false,
            "description": "If enabled Camel will output files",
            "title": "Show Files",
            "type": "boolean",
          },
          "showFuture": {
            "deprecated": false,
            "description": "If enabled Camel will on Future objects wait for it to complete to obtain the payload to be logged.",
            "title": "Show Future",
            "type": "boolean",
          },
          "showHeaders": {
            "deprecated": false,
            "description": "Show the message headers.",
            "title": "Show Headers",
            "type": "boolean",
          },
          "showProperties": {
            "deprecated": false,
            "description": "Show the exchange properties (only custom). Use showAllProperties to show both internal and custom properties.",
            "title": "Show Properties",
            "type": "boolean",
          },
          "showStackTrace": {
            "deprecated": false,
            "description": "Show the stack trace, if an exchange has an exception. Only effective if one of showAll, showException or showCaughtException are enabled.",
            "title": "Show Stack Trace",
            "type": "boolean",
          },
          "showStreams": {
            "deprecated": false,
            "description": "Whether Camel should show stream bodies or not (eg such as java.io.InputStream). Beware if you enable this option then you may not be able later to access the message body as the stream have already been read by this logger. To remedy this you will have to use Stream Caching.",
            "title": "Show Streams",
            "type": "boolean",
          },
          "skipBodyLineSeparator": {
            "deprecated": false,
            "description": "Whether to skip line separators when logging the message body. This allows to log the message body in one line, setting this option to false will preserve any line separators from the body, which then will log the body as is.",
            "title": "Skip Body Line Separator",
            "type": "boolean",
          },
          "sourceLocationLoggerName": {
            "deprecated": false,
            "description": "If enabled then the source location of where the log endpoint is used in Camel routes, would be used as logger name, instead of the given name. However, if the source location is disabled or not possible to resolve then the existing logger name will be used.",
            "title": "Source Location Logger Name",
            "type": "boolean",
          },
          "style": {
            "deprecated": false,
            "description": "Sets the outputs style to use.",
            "enum": [
              "Default",
              "Tab",
              "Fixed",
            ],
            "title": "Style",
            "type": undefined,
          },
        },
        "required": [
          "loggerName",
        ],
        "title": "Endpoint Properties",
        "type": "object",
      },
      "pattern": {
        "deprecated": false,
        "description": "Sets the optional ExchangePattern used to invoke this endpoint",
        "enum": [
          "InOnly",
          "InOut",
        ],
        "title": "Pattern",
        "type": undefined,
      },
      "uri": {
        "deprecated": false,
        "description": "Sets the uri of the endpoint to send to.",
        "title": "Uri",
        "type": "string",
      },
    },
    "required": [
      "uri",
    ],
    "type": "object",
  },
  "title": "to",
}
`;

exports[`CamelComponentSchemaService getVisualComponentSchema should build the appropriate schema for standalone processors 1`] = `
{
  "definition": {
    "message": "Hello World",
  },
  "schema": {
    "properties": {
      "description": {
        "deprecated": false,
        "description": "Sets the description of this node",
        "title": "Description",
        "type": "string",
      },
      "disabled": {
        "deprecated": false,
        "description": "Whether to disable this EIP from the route during build time. Once an EIP has been disabled then it cannot be enabled later at runtime.",
        "title": "Disabled",
        "type": "boolean",
      },
      "id": {
        "deprecated": false,
        "description": "Sets the id of this node",
        "title": "Id",
        "type": "string",
      },
      "logName": {
        "deprecated": false,
        "description": "Sets the name of the logger",
        "title": "Log Name",
        "type": "string",
      },
      "logger": {
        "deprecated": false,
        "description": "To refer to a custom logger instance to lookup from the registry.",
        "title": "Logger",
        "type": "object",
      },
      "loggingLevel": {
        "deprecated": false,
        "description": "Sets the logging level. The default value is INFO",
        "enum": [
          "TRACE",
          "DEBUG",
          "INFO",
          "WARN",
          "ERROR",
          "OFF",
        ],
        "title": "Logging Level",
        "type": undefined,
      },
      "marker": {
        "deprecated": false,
        "description": "To use slf4j marker",
        "title": "Marker",
        "type": "string",
      },
      "message": {
        "deprecated": false,
        "description": "Sets the log message (uses simple language)",
        "title": "Message",
        "type": "string",
      },
    },
    "required": [
      "message",
    ],
    "type": "object",
  },
  "title": "log",
}
`;

exports[`CamelComponentSchemaService getVisualComponentSchema should not build a schema for an unknown component 1`] = `
{
  "definition": {
    "id": "to-3044",
    "parameters": {
      "level": "ERROR",
    },
    "uri": "non-existing-component",
  },
  "schema": {
    "properties": {
      "description": {
        "deprecated": false,
        "description": "Sets the description of this node",
        "title": "Description",
        "type": "string",
      },
      "disabled": {
        "deprecated": false,
        "description": "Whether to disable this EIP from the route during build time. Once an EIP has been disabled then it cannot be enabled later at runtime.",
        "title": "Disabled",
        "type": "boolean",
      },
      "id": {
        "deprecated": false,
        "description": "Sets the id of this node",
        "title": "Id",
        "type": "string",
      },
      "pattern": {
        "deprecated": false,
        "description": "Sets the optional ExchangePattern used to invoke this endpoint",
        "enum": [
          "InOnly",
          "InOut",
        ],
        "title": "Pattern",
        "type": undefined,
      },
      "uri": {
        "deprecated": false,
        "description": "Sets the uri of the endpoint to send to.",
        "title": "Uri",
        "type": "string",
      },
    },
    "required": [
      "uri",
    ],
    "type": "object",
  },
  "title": "to",
}
`;
